--- a/main.css
+++ b/main.css
@@ -27,13 +27,14 @@ body {
     transition: 0.3s ease-in-out;
 }
 .inner-area .image__item:hover {
-    -webkit-transform: scale(1.3);
-    transform: scale(1.3);
+    -webkit-transform: scale(1.15);
+    transform: scale(1.15);
 }
 
 .wrapper {
     position: relative;
-    width: 350px;
+    width: 540px;
+    height: 540px;
     padding: 30px;
     border-radius: 10px;
     display: flex;
@@ -73,7 +74,7 @@ body {
 }
 
 .wrapper .icon {
-    font-size: 17px;
+    font-size: 20px;
     position: absolute;
     cursor: pointer;
     opacity: 0.7;
@@ -153,8 +154,8 @@ body {
 }
 
 .wrapper .img-area {
-    height: 150px;
-    width: 150px;
+    height: 180px;
+    width: 180px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -172,23 +173,23 @@ body {
     object-fit: cover;
 }
 .wrapper .name {
-    font-size: 23px;
-    font-weight: 500;
+    font-size: 26px;
+    font-weight: 600;
     color: #31344b;
     margin: 10px 0 5px 0;
 }
 .wrapper .about {
     color: #44476a;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 18px;
 }
 .wrapper .social-icons {
-    margin: 15px 0 25px 0;
+    margin: 25px 0;
 }
 .social-icons a {
     position: relative;
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     margin: 0 5px;
     display: inline-flex;
     text-decoration: none;
@@ -227,19 +228,19 @@ button a {
     text-align: center;
     width: 100%;
     height: 100%;
-    line-height: 40px;
+    line-height: 50px;
 }
 .social-icons a.fb i {
     color: #4267b2;
 }
 
-.social-icons a.tiktok i {
+.social-icons a.zalo i {
+    color: #19e912;
+}
+.social-icons a.linkedin i {
     color: #12c2e9;
 }
-.social-icons a.insta i {
-    color: #e1306c;
-}
-.social-icons a.yt i {
+.social-icons a.email i {
     color: #ff0000;
 }
 .wrapper .buttons {
